[package]
name = "curly-fortnight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
axum = "0.4.3"
log = "0.4.14"
pretty_env_logger = "0.4.0"
tokio = {version="1.15.0", features=["macros", "rt-multi-thread"]}
tower = "0.4.11"
tower-http = {version="0.2.0", features=["trace"]}
tracing-subscriber = "0.3.5"
